--- a/client/src/pages/home/Signin.module.css
+++ b/client/src/pages/home/Signin.module.css
@@ -44,6 +44,11 @@
   gap: 15px;
 }
 
+.error {
+  color: red;
+  font-size: 14px;
+}
+
 /* NEW ACCOUNT BUTTON */
 #new_account_btn {
   background-color: #42b72a;
