--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -63,6 +63,9 @@ a {
   #hamburger_icon {
     display: none;
   }
+  #log_out {
+    display: none;
+  }
   .nav {
     display: flex;
     flex-direction: row;
