--- a/client/src/pages/feed/CreatePost.module.css
+++ b/client/src/pages/feed/CreatePost.module.css
@@ -1,10 +1,18 @@
 .create_post {
-  width: 670px;
-  margin: 0 auto;
-  border-radius: 10px;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
-    0 8px 10px -6px rgb(0 0 0 / 0.1);
+  background-color: #fff;
+  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   padding: 10px 20px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 500px;
+}
+
+.header {
   position: relative;
 }
 
@@ -18,8 +26,8 @@
 
 .close_icon_container {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: -5px;
+  right: -5px;
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -155,5 +163,9 @@
 }
 
 .file_input {
+  display: none;
+}
+
+.hide {
   display: none;
 }
