--- a/client/src/pages/feed/Post.module.css
+++ b/client/src/pages/feed/Post.module.css
@@ -6,7 +6,7 @@
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
   padding: 10px 20px;
-  border: 1px solid red;
+  background-color: #fff;
 }
 
 /* POST HEADER */
