--- a/client/src/pages/feed/Post.module.css
+++ b/client/src/pages/feed/Post.module.css
@@ -1,7 +1,7 @@
 .post {
   max-width: 670px;
   width: 90%;
-  margin: 0 auto;
+  margin: 20px auto;
   border-radius: 10px;
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
@@ -56,6 +56,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  width: 100%;
 }
 
 .likes_info_container {
@@ -125,4 +126,8 @@
 .likes_control_container:hover {
   background-color: #f2f2f2;
   cursor: pointer;
+}
+
+.liked {
+  color: #166fe5;
 }
