--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+button {
+  font-family: 'Roboto', sans-serif;
+}
+
 button:hover {
   cursor: pointer;
 }
