--- a/client/src/pages/feed/SingleComment.module.css
+++ b/client/src/pages/feed/SingleComment.module.css
@@ -3,6 +3,8 @@
 .single_comment {
   display: flex;
   gap: 10px;
+  position: relative;
+  margin-bottom: 30px;
 }
 
 .comment_user_icon_container {
@@ -29,4 +31,12 @@
 
 .comment_text {
   font-size: 15px;
+}
+
+.created_at {
+  position: absolute;
+  bottom: -20px;
+  left: 70px;
+  font-size: 14px;
+  color: #65676b;
 }
