changes to jwt auth

--- a/client/src/pages/feed/styles/CreatePost.module.css
+++ b/client/src/pages/feed/styles/CreatePost.module.css
@@ -50,6 +50,9 @@
   justify-content: center;
   align-items: center;
   background-color: #bfc2c6;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .upper_row {
