--- a/client/src/pages/friends/styles/Suggestions.module.css
+++ b/client/src/pages/friends/styles/Suggestions.module.css
@@ -24,6 +24,9 @@
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .suggestion_name_text {
