--- a/client/src/pages/profile/styles/ProfileController.module.css
+++ b/client/src/pages/profile/styles/ProfileController.module.css
@@ -35,6 +35,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .file_input {
