--- a/client/src/pages/feed/styles/Post.module.css
+++ b/client/src/pages/feed/styles/Post.module.css
@@ -29,6 +29,10 @@
   color: #65676b;
 }
 
+.user_icon path {
+  fill: #fff;
+}
+
 .user_icon_container {
   height: 50px;
   width: 50px;
@@ -36,8 +40,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #bfc2c6;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* POST TEXT */
