--- a/client/src/pages/friends/styles/SingleRequest.module.css
+++ b/client/src/pages/friends/styles/SingleRequest.module.css
@@ -25,6 +25,13 @@
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #d8dadf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .suggestion_name_text {
