--- a/client/src/pages/friends/styles/SingleSuggestion.module.css
+++ b/client/src/pages/friends/styles/SingleSuggestion.module.css
@@ -27,6 +27,10 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #d8dadf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .suggestion_name_text {
