--- a/client/src/pages/friends/styles/Suggestions.module.css
+++ b/client/src/pages/friends/styles/Suggestions.module.css
@@ -1,11 +1,12 @@
 .suggestions {
   width: 100%;
   background-color: #fff;
-  padding: 10px;
+  padding: 20px 40px;
+  min-height: calc(100vh - 90px);
 }
 
 .title {
-  padding-bottom: 10px;
+  padding-bottom: 40px;
 }
 
 .list_item {
@@ -13,6 +14,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+}
+
+.no_suggestions {
+  text-align: center;
+  margin-top: 20px;
 }
 
 .list_item:hover {
@@ -58,11 +64,9 @@
     border-radius: 0;
   }
   .suggestions_list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+    gap: 20px;
   }
   .list_item {
     flex-direction: column;
