--- a/client/src/pages/home/styles/Signin.module.css
+++ b/client/src/pages/home/styles/Signin.module.css
@@ -19,6 +19,11 @@
   outline: 1px solid #1877f2;
 }
 
+.created_success {
+  text-align: center;
+  color: #36a420;
+}
+
 #hr {
   margin: 20px 0;
   border-bottom: 1px solid #dadde1;
